Bug 263326 - Sudden crash after new tab + facebook [qFatal, QAbstractItemModel::beginRemoveRows, HistoryFilterModel::sourceRowsInserted, ..., HistoryModel::entryAdded]
Summary: Sudden crash after new tab + facebook [qFatal, QAbstractItemModel::beginRemov...
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.6.1
Platform: unspecified Linux
: NOR crash
Target Milestone: 0.7
Assignee: Andrea Diamantini
URL:
Keywords:
: 264291 268359 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-16 16:22 UTC by ojrajala
Modified: 2011-03-13 14:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ojrajala 2011-01-16 16:22:24 UTC
Application: rekonq (0.6.1)
KDE Platform Version: 4.5.95 (4.6 RC2)
Qt Version: 4.7.0
Operating System: Linux 2.6.37-CHAKRA x86_64

-- Information about the crash:
- What I was doing when the application crashed: I had just finished a movie in smplayer using vdpau, came directly to rekonq, opened new tab, typed facebook.com and immediately after pressing enter rekonq crashed.

-- Backtrace:
Application: rekonq (kdeinit4), signal: Aborted
[Current thread is 1 (Thread 0x7ff91d4a7760 (LWP 10022))]

Thread 7 (Thread 0x7ff903e19710 (LWP 10023)):
#0  0x00007ff91bd7140c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007ff91257c574 in WTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib/libQtWebKit.so.4
#2  0x00007ff91257c5a9 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib/libQtWebKit.so.4
#3  0x00007ff90f6b5ae3 in ?? () from /usr/lib/libGL.so.1
#4  0x00007ff91bd6ccb0 in start_thread () from /lib/libpthread.so.0
#5  0x00007ff91aa9b9fd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7ff901c4a710 (LWP 10024)):
#0  0x00007ff91bd7140c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007ff91bff99fb in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x11ba0d0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x11ba0d0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007ff91062c894 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x11de020, th=0x13b6630)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007ff91062ef03 in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x13b6630)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007ff91062ef1c in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x13b6630)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007ff91062ef1c in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x13b6630)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00007ff91062dcef in ThreadWeaver::ThreadRunHelper::run (this=0x7ff901c49d70, parent=0x11de020, th=0x13b6630)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/Thread.cpp:87
#8  0x00007ff91062dd78 in ThreadWeaver::Thread::run (this=0x13b6630) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/Thread.cpp:142
#9  0x00007ff91bff91c7 in QThreadPrivate::start (arg=0x13b6630) at thread/qthread_unix.cpp:266
#10 0x00007ff90f6b5ae3 in ?? () from /usr/lib/libGL.so.1
#11 0x00007ff91bd6ccb0 in start_thread () from /lib/libpthread.so.0
#12 0x00007ff91aa9b9fd in clone () from /lib/libc.so.6
#13 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7ff8f9f9f710 (LWP 10086)):
#0  0x00007ff91bd7140c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007ff91138eea4 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7ff9116abda0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007ff91138eed9 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x7ff9116b9e74) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007ff90f6b5ae3 in ?? () from /usr/lib/libGL.so.1
#4  0x00007ff91bd6ccb0 in start_thread () from /lib/libpthread.so.0
#5  0x00007ff91aa9b9fd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7ff8f92a1710 (LWP 10087)):
#0  0x00007ff91bd7140c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007ff91bff99fb in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x11ba0d0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x11ba0d0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007ff91062c894 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x11de020, th=0x19506a0)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007ff91062ef03 in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x19506a0)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007ff91062ef1c in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x19506a0)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007ff91062ef1c in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x19506a0)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00007ff91062ef1c in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x19506a0)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:74
#8  0x00007ff91062dcef in ThreadWeaver::ThreadRunHelper::run (this=0x7ff8f92a0d70, parent=0x11de020, th=0x19506a0)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/Thread.cpp:87
#9  0x00007ff91062dd78 in ThreadWeaver::Thread::run (this=0x19506a0) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/Thread.cpp:142
#10 0x00007ff91bff91c7 in QThreadPrivate::start (arg=0x19506a0) at thread/qthread_unix.cpp:266
#11 0x00007ff90f6b5ae3 in ?? () from /usr/lib/libGL.so.1
#12 0x00007ff91bd6ccb0 in start_thread () from /lib/libpthread.so.0
#13 0x00007ff91aa9b9fd in clone () from /lib/libc.so.6
#14 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7ff8fa9a6710 (LWP 10861)):
#0  0x00007ff91bd7140c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007ff91bff99fb in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x11ba0d0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x11ba0d0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007ff91062c894 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x11de020, th=0x193b830)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007ff91062ef03 in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x193b830)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007ff91062ef1c in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x193b830)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007ff91062dcef in ThreadWeaver::ThreadRunHelper::run (this=0x7ff8fa9a5d70, parent=0x11de020, th=0x193b830)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/Thread.cpp:87
#7  0x00007ff91062dd78 in ThreadWeaver::Thread::run (this=0x193b830) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/Thread.cpp:142
#8  0x00007ff91bff91c7 in QThreadPrivate::start (arg=0x193b830) at thread/qthread_unix.cpp:266
#9  0x00007ff90f6b5ae3 in ?? () from /usr/lib/libGL.so.1
#10 0x00007ff91bd6ccb0 in start_thread () from /lib/libpthread.so.0
#11 0x00007ff91aa9b9fd in clone () from /lib/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7ff8f789e710 (LWP 10867)):
#0  0x00007ff91bd7140c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007ff91bff99fb in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x11ba0d0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x11ba0d0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007ff91062c894 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x11de020, th=0x369d480)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007ff91062ef03 in ThreadWeaver::WorkingHardState::applyForWork (this=0x11da010, th=0x369d480)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007ff91062dcef in ThreadWeaver::ThreadRunHelper::run (this=0x7ff8f789dd70, parent=0x11de020, th=0x369d480)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/Thread.cpp:87
#6  0x00007ff91062dd78 in ThreadWeaver::Thread::run (this=0x369d480) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/threadweaver/Weaver/Thread.cpp:142
#7  0x00007ff91bff91c7 in QThreadPrivate::start (arg=0x369d480) at thread/qthread_unix.cpp:266
#8  0x00007ff90f6b5ae3 in ?? () from /usr/lib/libGL.so.1
#9  0x00007ff91bd6ccb0 in start_thread () from /lib/libpthread.so.0
#10 0x00007ff91aa9b9fd in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7ff91d4a7760 (LWP 10022)):
[KCrash Handler]
#6  0x00007ff91a9ff595 in raise () from /lib/libc.so.6
#7  0x00007ff91aa00a16 in abort () from /lib/libc.so.6
#8  0x00007ff91bfefc3f in qt_message_output (msgType=<value optimized out>, buf=<value optimized out>) at global/qglobal.cpp:2259
#9  0x00007ff91bfefdcd in qt_message (msgType=QtFatalMsg, msg=0x7ff91c155ff8 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fffcc07f330) at global/qglobal.cpp:2305
#10 0x00007ff91bfeff65 in qFatal (msg=<value optimized out>) at global/qglobal.cpp:2488
#11 0x00007ff91c0e6850 in QAbstractItemModel::beginRemoveRows (this=0x11cee70, parent=..., first=-1, last=-1) at kernel/qabstractitemmodel.cpp:2446
#12 0x00007ff90a7aa912 in HistoryFilterModel::sourceRowsInserted(QModelIndex const&, int, int) () from /usr/lib/libkdeinit4_rekonq.so
#13 0x00007ff90a7aab1c in HistoryFilterModel::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeinit4_rekonq.so
#14 0x00007ff91c107bff in QMetaObject::activate (sender=0x14bf5d0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffcc07f710) at kernel/qobject.cpp:3280
#15 0x00007ff91c152514 in QAbstractItemModel::rowsInserted (this=<value optimized out>, _t1=<value optimized out>, _t2=0, _t3=0) at .moc/debug-shared/moc_qabstractitemmodel.cpp:181
#16 0x00007ff91c0e9e97 in QAbstractItemModel::endInsertRows (this=0x14bf5d0) at kernel/qabstractitemmodel.cpp:2413
#17 0x00007ff90a7a796f in HistoryModel::entryAdded() () from /usr/lib/libkdeinit4_rekonq.so
#18 0x00007ff90a7a7a7c in HistoryModel::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeinit4_rekonq.so
#19 0x00007ff91c107bff in QMetaObject::activate (sender=0x148b5b0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffcc07f8a0) at kernel/qobject.cpp:3280
#20 0x00007ff90a7a3f05 in HistoryManager::entryAdded(HistoryItem const&) () from /usr/lib/libkdeinit4_rekonq.so
#21 0x00007ff90a7a50f2 in HistoryManager::addHistoryEntry(QString const&) () from /usr/lib/libkdeinit4_rekonq.so
#22 0x00007ff9122f32f3 in WebCore::FrameLoaderClientQt::updateGlobalHistory() () from /usr/lib/libQtWebKit.so.4
#23 0x00007ff9120f00af in WebCore::HistoryController::updateForStandardLoad() () from /usr/lib/libQtWebKit.so.4
#24 0x00007ff9120e0877 in WebCore::FrameLoader::transitionToCommitted(WTF::PassRefPtr<WebCore::CachedPage>) () from /usr/lib/libQtWebKit.so.4
#25 0x00007ff9120e44e5 in WebCore::FrameLoader::commitProvisionalLoad(WTF::PassRefPtr<WebCore::CachedPage>) () from /usr/lib/libQtWebKit.so.4
#26 0x00007ff9120cdb72 in WebCore::DocumentLoader::commitIfReady() () from /usr/lib/libQtWebKit.so.4
#27 0x00007ff9120cdbc8 in WebCore::DocumentLoader::commitLoad(char const*, int) () from /usr/lib/libQtWebKit.so.4
#28 0x00007ff91210f83d in WebCore::ResourceLoader::didReceiveData(char const*, int, long long, bool) () from /usr/lib/libQtWebKit.so.4
#29 0x00007ff9120fe738 in WebCore::MainResourceLoader::didReceiveData(char const*, int, long long, bool) () from /usr/lib/libQtWebKit.so.4
#30 0x00007ff91210dfe3 in WebCore::ResourceLoader::didReceiveData(WebCore::ResourceHandle*, char const*, int, int) () from /usr/lib/libQtWebKit.so.4
#31 0x00007ff9122d31a3 in WebCore::QNetworkReplyHandler::forwardData() () from /usr/lib/libQtWebKit.so.4
#32 0x00007ff9122d3b94 in WebCore::QNetworkReplyHandler::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtWebKit.so.4
#33 0x00007ff91c107bff in QMetaObject::activate (sender=0x407ee00, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3280
#34 0x00007ff9153f4a77 in KDEPrivate::AccessManagerReply::qt_metacall (this=0x407ee00, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffcc07ff90)
    at /home/manutortosa/desktop-testing/kdelibs/src/build/kio/accessmanagerreply_p.moc:81
#35 0x00007ff91c107bff in QMetaObject::activate (sender=0x18052d0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffcc07ff90) at kernel/qobject.cpp:3280
#36 0x00007ff91542dfa4 in KIO::TransferJob::data (this=<value optimized out>, _t1=0x18052d0, _t2=<value optimized out>) at /home/manutortosa/desktop-testing/kdelibs/src/build/kio/jobclasses.moc:388
#37 0x00007ff91542e010 in KIO::TransferJob::slotData (this=0x18052d0, _data=...) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kio/kio/job.cpp:1009
#38 0x00007ff9154350a6 in KIO::TransferJob::qt_metacall (this=0x18052d0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffcc080150)
    at /home/manutortosa/desktop-testing/kdelibs/src/build/kio/jobclasses.moc:368
#39 0x00007ff91c107bff in QMetaObject::activate (sender=0x44f4a10, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffcc080150) at kernel/qobject.cpp:3280
#40 0x00007ff9154d26a2 in KIO::SlaveInterface::data (this=<value optimized out>, _t1=<value optimized out>) at /home/manutortosa/desktop-testing/kdelibs/src/build/kio/slaveinterface.moc:146
#41 0x00007ff9154d5768 in KIO::SlaveInterface::dispatch (this=<value optimized out>, _cmd=100, rawdata=...)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kio/kio/slaveinterface.cpp:161
#42 0x00007ff9154d2143 in KIO::SlaveInterface::dispatch (this=<value optimized out>) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kio/kio/slaveinterface.cpp:89
#43 0x00007ff9154c58f6 in KIO::Slave::gotInput (this=0x44f4a10) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kio/kio/slave.cpp:348
#44 0x00007ff9154c5f0c in KIO::Slave::qt_metacall (this=0x44f4a10, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffcc080570)
    at /home/manutortosa/desktop-testing/kdelibs/src/build/kio/slave.moc:82
#45 0x00007ff91c107bff in QMetaObject::activate (sender=0x1882140, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3280
#46 0x00007ff9153fd747 in KIO::ConnectionPrivate::dequeue (this=0x3826020) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kio/kio/connection.cpp:82
#47 0x00007ff9153fd7fd in KIO::Connection::qt_metacall (this=0x1882140, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x1761760)
    at /home/manutortosa/desktop-testing/kdelibs/src/build/kio/connection.moc:79
#48 0x00007ff91c1069ba in QObject::event (this=0x1882140, e=<value optimized out>) at kernel/qobject.cpp:1219
#49 0x00007ff91b1ee2f4 in QApplicationPrivate::notify_helper (this=0x10e61b0, receiver=0x1882140, e=0x3dabcb0) at kernel/qapplication.cpp:4397
#50 0x00007ff91b1f3531 in QApplication::notify (this=<value optimized out>, receiver=0x1882140, e=0x3dabcb0) at kernel/qapplication.cpp:4278
#51 0x00007ff91ce9c596 in KApplication::notify (this=0x7fffcc081050, receiver=0x1882140, event=0x3dabcb0)
    at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kdeui/kernel/kapplication.cpp:311
#52 0x00007ff91c0f04ec in QCoreApplication::notifyInternal (this=0x7fffcc081050, receiver=0x1882140, event=0x3dabcb0) at kernel/qcoreapplication.cpp:732
#53 0x00007ff91c0f4422 in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0xfb4c00) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#54 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0xfb4c00) at kernel/qcoreapplication.cpp:1373
#55 0x00007ff91c11e593 in QCoreApplication::sendPostedEvents (s=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#56 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#57 0x00007ff917aeabf3 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#58 0x00007ff917aeb3d0 in ?? () from /usr/lib/libglib-2.0.so.0
#59 0x00007ff917aeb66d in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#60 0x00007ff91c11e72f in QEventDispatcherGlib::processEvents (this=0x10d90b0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#61 0x00007ff91b29d99e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#62 0x00007ff91c0eef82 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#63 0x00007ff91c0ef1cc in QEventLoop::exec (this=0x7fffcc080fa0, flags=...) at kernel/qeventloop.cpp:201
#64 0x00007ff91c0f471b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#65 0x00007ff90a7e1819 in kdemain () from /usr/lib/libkdeinit4_rekonq.so
#66 0x0000000000407213 in launch (argc=1, _name=0x10b10d8 "/usr/bin/rekonq", args=<value optimized out>, cwd=0x0, envc=<value optimized out>, envs=<value optimized out>, reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x10b1103 "celes;1295142327;668196;8196_TIME95745854") at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kinit/kinit.cpp:730
#67 0x0000000000407d50 in handle_launcher_request (sock=<value optimized out>, who=<value optimized out>) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kinit/kinit.cpp:1222
#68 0x0000000000408475 in handle_requests (waitForPid=<value optimized out>) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kinit/kinit.cpp:1415
#69 0x0000000000409090 in main (argc=4, argv=0x7fffcc082978, envp=0x7fffcc0829a0) at /home/manutortosa/desktop-testing/kdelibs/src/kdelibs-4.5.95/kinit/kinit.cpp:1903

Reported using DrKonqi
Comment 1 Dario Andres 2011-01-30 23:18:33 UTC
[Comment from a bug triager]
From bug 264291:
Application: rekonq (0.6.1) (KDE SC 4.5.5)
-- Information about the crash:
- What I was doing when the application crashed:
Just had a couple of tabs open, some forums, and some youtube links. I tried
reloading one of the youtube links and rekonq crashed. Don't know if it's
related, but I had just installed gnash and was trying to test it
(unsucessfully).
Comment 2 Dario Andres 2011-01-30 23:18:43 UTC
*** Bug 264291 has been marked as a duplicate of this bug. ***
Comment 3 Andrea Diamantini 2011-02-28 20:00:38 UTC
I cannot reproduce this crash here. Can you please try with rekonq 0.6.85, KDE SC 4.6 & Qt 4.7.1?
Comment 4 Andrea Diamantini 2011-03-02 18:00:38 UTC
Git commit d6fc82906b5724d8c5f4b782ad850e4462e56af2 by Andrea Diamantini.
Committed on 02/03/2011 at 17:58.
Pushed by adjam into branch 'master'.

Prevent crashes on history models updating...

BUG:263326

M  +9    -1    src/history/historymodels.cpp     

http://commits.kde.org/rekonq/d6fc82906b5724d8c5f4b782ad850e4462e56af2
Comment 5 Dario Andres 2011-03-13 14:43:15 UTC
*** Bug 268359 has been marked as a duplicate of this bug. ***