Prevent crashes on history models updating...

BUG:263326